Admin logs (#58)
* Audit Logs for Admin

* Admin Audit Logs max 100 records.

* Error Printing